--- a/AlanaRetratos-Front-End/styles.css
+++ b/AlanaRetratos-Front-End/styles.css
@@ -1,204 +1,202 @@
-:root{
-    --grey: rgb(125,130,133);
-    --purple: rgb(125,27,76);
-    --yellow: rgb(231,201,137);
-    --white: #fffafa;
-    --black: rgb(0,0,0);
+:root {
+  --grey: rgb(125, 130, 133);
+  --purple: rgb(125, 27, 76);
+  --yellow: rgb(231, 201, 137);
+  --white: #fffafa;
+  --black: rgb(0, 0, 0);
 }
 
-body{
-    /* background-color: var(--grey); */
-    background: rgba(125,130,133, 0.2);
-    padding: 0;
-    margin: 0;
-    position: relative;
-    box-sizing: border-box;
+body {
+  /* background-color: var(--grey); */
+  background: rgba(125, 130, 133, 0.2);
+  padding: 0;
+  margin: 0;
+  position: relative;
+  box-sizing: border-box;
 }
 
-label{
-    margin-bottom: 5px;
+label {
+  margin-bottom: 5px;
 }
 
-input{
-    margin-bottom: 10px;
+input {
+  margin-bottom: 10px;
 }
 
-li{
-    list-style-type: none;
+li {
+  list-style-type: none;
 }
 
-::-webkit-scrollbar{
-    width: 10px;
-    color: var(--grey);
+::-webkit-scrollbar {
+  width: 10px;
+  color: var(--grey);
 }
 
 
 ::-webkit-scrollbar-thumb {
-    background: var(--grey);
+  background: var(--grey);
 }
 
-.info-display{
-    box-sizing: border-box;
-    padding: 50px;
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+.info-display {
+  box-sizing: border-box;
+  padding: 50px;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
-.main-header{
-    border-bottom: 1px solid black;
-    padding: 10px;
+.main-header {
+  border-bottom: 1px solid black;
+  padding: 10px;
 }
 
-.header-div{
-    display: flex;
-    justify-content: space-between;
-    flex-direction: row;
+.header-div {
+  display: flex;
+  justify-content: space-between;
+  flex-direction: row;
 }
 
 
-.header-button{
-    border: none;
-    background-color: transparent;
+.header-button {
+  border: none;
+  background-color: transparent;
 }
 
-.header-button>a{
-    text-decoration: none;
-    color: black;
+.header-button>a {
+  text-decoration: none;
+  color: black;
 }
 
-.main-container{
-    display: flex;
-    flex-direction: column;
-    /* background-color: blue; */
-    height: fit-content;
-    align-items: center;
-    justify-content: space-around;
+.main-container {
+  display: flex;
+  flex-direction: column;
+  /* background-color: blue; */
+  height: fit-content;
+  align-items: center;
+  justify-content: space-around;
 }
 
-.nav-list{
-    /* width: 300px; */
-    /* position: relative;
+.nav-list {
+  /* width: 300px; */
+  /* position: relative;
     top: 50%;
     -ms-transform: translateY(-50%);
     transform: translateY(-50%); */
 
-    font-size: 1.7rem;
-    box-sizing: border-box;
-    display: flex;
-    gap:50px;
-    /* flex-direction: column; */
-    
-}
-.logo-img{
-    width: 120px;
+  font-size: 1.7rem;
+  box-sizing: border-box;
+  display: flex;
+  gap: 50px;
+  /* flex-direction: column; */
+
 }
 
-.calendar-div{
-    /* margin: 0 auto; */
-    padding: 50px;
-    width: 100%;
-    height: 91vh;
+.logo-img {
+  width: 120px;
+}
+
+.calendar-div {
+  /* margin: 0 auto; */
+  padding: 50px;
+  width: 100%;
+  height: 91vh;
 }
 
 /* Modal Starts here */
 .modal {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    
-    gap: 0.4rem;
-    width: 450px;
-    padding: 1.3rem;
-    min-height: 250px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 
-    /* margin: auto; */
-    position: absolute;
-    
-    transform: translate(-50%,-50%);
-    top: 50%;
-    left:50%;
-    
-    background-color: white;
-    border: 1px solid #ddd;
-    border-radius: 15px;
-  }
-  
-  .modal .flex {
-    display: flex;
-    /* align-items: center; */
-    justify-content: flex-end;
-  }
-  
-  .modal input {
-    padding: 0.7rem 1rem;
-    border: 1px solid #ddd;
-    border-radius: 5px;
-    font-size: 0.9em;
-  }
-  
-  .modal p {
-    font-size: 0.9rem;
-    color: #777;
-    margin: 0.4rem 0 0.2rem;
-  }
-  
-  button {
-    cursor: pointer;
-    border: none;
-    font-weight: 600;
-  }
-  
-  .btn {
-    display: inline-block;
-    padding: 0.8rem 1.4rem;
-    font-weight: 700;
-    background-color: black;
-    color: white;
-    border-radius: 5px;
-    text-align: center;
-    font-size: 1em;
-  }
-   
-  .btn-open {
-    height: fit-content;
-  }
-  
-  .btn-close {
-    transform: translate(0, -8px);
-    padding: 0.5rem 0.7rem;
-    background: #eee;
-    border-radius: 50%;
-    
-  }
+  gap: 0.4rem;
+  width: 450px;
+  padding: 1.3rem;
+  min-height: 250px;
 
-  .overlay {
-    position: fixed;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.5);
-    backdrop-filter: blur(3px);
-    z-index: 1;
-  }
+  /* margin: auto; */
+  position: absolute;
 
-  .modal {
-    z-index: 2;
-  }
+  transform: translate(-50%, -50%);
+  top: 50%;
+  left: 50%;
 
-  .hidden {
+  background-color: white;
+  border: 1px solid #ddd;
+  border-radius: 15px;
+}
+
+.modal .flex {
+  display: flex;
+  /* align-items: center; */
+  justify-content: flex-end;
+}
+
+.modal input {
+  padding: 0.7rem 1rem;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  font-size: 0.9em;
+}
+
+.modal p {
+  font-size: 0.9rem;
+  color: #777;
+  margin: 0.4rem 0 0.2rem;
+}
+
+button {
+  cursor: pointer;
+  border: none;
+  font-weight: 600;
+}
+
+.btn {
+  display: inline-block;
+  padding: 0.8rem 1.4rem;
+  font-weight: 700;
+  background-color: black;
+  color: white;
+  border-radius: 5px;
+  text-align: center;
+  font-size: 1em;
+}
+
+.btn-open {
+  height: fit-content;
+}
+
+.btn-close {
+  transform: translate(0, -8px);
+  padding: 0.5rem 0.7rem;
+  background: #eee;
+  border-radius: 50%;
+}
+
+.overlay {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  backdrop-filter: blur(3px);
+  z-index: 1;
+}
+
+.modal {
+  z-index: 2;
+}
+
+.hidden {
   display: none;
 }
+
 /* Modal Ends here */
 
-.appointment-form{
-    display: flex;
-    flex-direction: column;
+.appointment-form {
+  display: flex;
+  flex-direction: column;
 }
-
-
-
