--- a/AlanaRetratos-Front-End/styles.css
+++ b/AlanaRetratos-Front-End/styles.css
@@ -1,24 +1,29 @@
 :root {
   --grey: rgb(125, 130, 133);
+  --lightGrey: rgba(125, 130, 133, 0.06);
   --purple: rgb(125, 27, 76);
+  --lightPurple:rgba(125, 27, 76, 0.275);
   --yellow: rgb(231, 201, 137);
+  --lightYellow:rgba(231, 201, 137, 0.313);
   --white: #fffafa;
   --black: rgb(0, 0, 0);
+  --red: rgb(122 21 25);
+  --blue: rgb(26, 26, 253);
 }
 
-
+/* General Tags */
 
 body {
-  /* background-color: var(--grey); */
-  background: rgba(125, 130, 133, 0.2);
+  background: rgba(241, 250, 255, 0.2);
   padding: 0;
   margin: 0;
   position: relative;
   box-sizing: border-box;
   width: 100vw;
   height: 100vh;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  
 }
-
 td{
   border: 1px solid black;
   border-radius: 3px;
@@ -27,7 +32,7 @@ td{
 
 
 label {
-  margin-bottom: 5px;
+  margin-bottom: 10px;
 }
 
 input {
@@ -38,40 +43,58 @@ li {
   list-style-type: none;
 }
 
+/* General Tags End */
+
 ::-webkit-scrollbar {
   width: 10px;
   color: var(--grey);
 }
-
-
 ::-webkit-scrollbar-thumb {
   background: var(--grey);
 }
 
-.info-display {
-  box-sizing: border-box;
-  padding: 50px;
-  width: 90%;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
+/* Doodle */
+.doodle {
+  position: relative;
+  overflow: auto
+  ;
 }
+.doodle::before {
+  position: absolute;
+  content: ' ';
+  display: block;
+  opacity: 0.05;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  background-repeat: no-repeat;
+  background-position: top;
+  background-size: cover;
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(255, 232, 210, 1)), url(assets/img/93845657-hand-drawn-doodle-photography-seamless-pattern.webp);
+}
+/* Doodle End*/
 
+
+/* Containers */
 .main-header {
   border-bottom: 1px solid black;
-  padding: 10px;
+  padding: 20px 30px;
 }
-
 .header-div {
   display: flex;
   justify-content: space-between;
   flex-direction: row;
 }
-
-
-.header-button {
-  border: none;
-  background-color: transparent;
+.info-display {
+  box-sizing: border-box;
+  padding: 30px 10px;
+  width: 90%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100vw;
 }
 
 .header-button>a {
@@ -82,25 +105,17 @@ li {
 .main-container {
   display: flex;
   flex-direction: column;
-  /* background-color: blue; */
   height: fit-content;
   align-items: center;
   justify-content: space-around;
 }
 
 .nav-list {
-  /* width: 300px; */
-  /* position: relative;
-    top: 50%;
-    -ms-transform: translateY(-50%);
-    transform: translateY(-50%); */
-
-  font-size: 1.7rem;
+  font-size: 1rem;
   box-sizing: border-box;
   display: flex;
+  padding: 0 30px;
   gap: 50px;
-  /* flex-direction: column; */
-
 }
 
 .logo-img {
@@ -108,13 +123,106 @@ li {
 }
 
 .calendar-div {
-  /* margin: 0 auto; */
-  padding: 50px;
-  width: 90%;
-  height: 91vh;
+  padding: 20px 20px;
+  width: 1200px;
+  height: 700px;
 }
 
-/* Modal Starts here */
+.appointment-form {
+  display: flex;
+  flex-direction: column;
+}
+
+
+
+.disabled{ 
+  background-color: rgba(0, 0, 0, 0.4) ;
+}
+
+/* Table */
+.appointment-list{
+  width: 80%;
+  padding: 20px;
+
+  border: 1px solid rgb(0, 0, 0);
+  border-radius: 5px;
+
+  background-color: var(--lightGrey);
+
+  text-align: center;
+  font-family: 'Times New Roman', Times, serif, sans-serif;
+
+}
+/* Buttons Start */
+
+button {
+  cursor: pointer;
+  border: none;
+  font-weight: 600;
+}
+
+.btn-hide-calendar{
+  
+}
+
+.btn-hide-list{
+  
+}
+
+.button-container{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  width: 500px;
+}
+
+.btn-remove{
+  color: var(--red);
+  background-color: transparent;
+}
+
+.btn-edit{
+  color: var(--yellow);
+  background-color: transparent;
+
+}
+
+.btn-specific{
+  font-weight: 600;
+  font-size: 1rem;
+  font-family: 'Times New Roman', Times, serif
+}
+
+.btn {
+  display: inline-block;
+  padding: 0.6rem 1.2rem;
+  font-weight: 600;
+  background-color: black;
+  color: white;
+  border-radius: 5px;
+  text-align: center;
+  font-size: 0.9em;
+  margin-top: 20px ;
+}
+
+.btn-open {
+  height: fit-content;
+}
+
+.btn-close {
+  transform: translate(0, -8px);
+  padding: 0.5rem 0.5rem;
+  background-color: transparent;
+}
+.header-button {
+  border: none;
+  background-color: transparent;
+}
+
+/* End Buttons */
+
+
+/* Modal Start */
 .modal {
   display: flex;
   flex-direction: column;
@@ -125,7 +233,6 @@ li {
   padding: 1.3rem;
   min-height: 250px;
 
-  /* margin: auto; */
   position: absolute;
 
   transform: translate(-50%, -50%);
@@ -139,8 +246,8 @@ li {
 
 .modal .flex {
   display: flex;
-  /* align-items: center; */
   justify-content: flex-end;
+  justify-content: space-between;
 }
 
 .modal input {
@@ -156,39 +263,11 @@ li {
   margin: 0.4rem 0 0.2rem;
 }
 
-button {
-  cursor: pointer;
-  border: none;
-  font-weight: 600;
-}
-
 select{
   justify-content: fit-content;
   padding: 7px;
   margin-bottom: 10px;
-}
-
-.btn {
-  display: inline-block;
-  padding: 0.8rem 1.4rem;
-  font-weight: 700;
-  background-color: black;
-  color: white;
   border-radius: 5px;
-  text-align: center;
-  font-size: 1em;
-  margin: 0 20px;
-}
-
-.btn-open {
-  height: fit-content;
-}
-
-.btn-close {
-  transform: translate(0, -8px);
-  padding: 0.5rem 0.7rem;
-  background: #eee;
-  border-radius: 50%;
 }
 
 .overlay {
@@ -212,41 +291,4 @@ select{
   display: none;
 }
 
-/* Modal Ends here */
-
-.appointment-form {
-  display: flex;
-  flex-direction: column;
-}
-
-.appointment-list{
-  width: 80%;
-  background-color: aliceblue;
-  padding: 20px;
-  border: 2px solid rgb(0, 0, 0);
-  text-align: center;
-  font-family: 'Times New Roman', Times, serif, sans-serif;
-
-}
-
-.disabled{ 
-  background-color: rgba(0, 0, 0, 0.4) ;
-}
-
-.btn-hide-calendar{
-  
-}
-
-.btn-hide-list{
-  
-}
-
-.button-container{
-  display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
-  width: 500px;
-}
-
-
-
+/* Modal End */
