--- a/AlanaRetratos-Front-End/styles.css
+++ b/AlanaRetratos-Front-End/styles.css
@@ -2,21 +2,19 @@
   --grey: #7d8285;
   --lightGrey: rgba(125, 130, 133, 0.06);
   --purple: rgb(125, 27, 76);
-  --lightPurple:rgba(125, 27, 76, 0.4);
+  --lightPurple: rgba(125, 27, 76, 0.4);
   --yellow: rgb(231, 201, 137);
-  --lightYellow:rgba(231, 201, 137, 0.313);
+  --lightYellow: rgba(231, 201, 137, 0.313);
   --white: #fffafa;
   --black: rgb(0, 0, 0);
   --red: rgb(122 21 25);
   --blue: rgb(26, 26, 253);
 
   --mom: rgba(123, 9, 9, 0.767);
-  --fashion: rgba(132,192,141, 0.4);
-  --career:rgba(56, 126, 237, 0.4);
+  --fashion: rgba(132, 192, 141, 0.4);
+  --career: rgba(56, 126, 237, 0.4);
   --event: rgba(255, 105, 74, 0.4);
-  --debutant: rgba(74,24,46, 0.4);
-
- 
+  --debutant: rgba(74, 24, 46, 0.4);
 }
 
 /* General Tags */
@@ -29,8 +27,8 @@ body {
   box-sizing: border-box;
   width: 100vw;
   height: 100vh;
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+
   --fc-button-border-color: #ffffff;
   --fc-button-text-color: #fff;
   --fc-border-color: #ddd;
@@ -40,7 +38,7 @@ body {
   --fc-today-bg-color: rgba(125, 130, 133, 0.15);
 }
 
-textarea{
+textarea {
   height: 100px;
   margin-bottom: 10px;
 }
@@ -70,12 +68,11 @@ li {
 /* Doodle */
 .doodle {
   position: relative;
-  overflow: auto
-  ;
+  overflow: auto;
 }
 .doodle::before {
   position: absolute;
-  content: ' ';
+  content: " ";
   display: block;
   opacity: 0.06;
   left: 0;
@@ -89,7 +86,6 @@ li {
   background: url(assets/img/istockphoto-1358066576-612x612.jpg);
 }
 /* Doodle End*/
-
 
 /* Containers */
 .main-header {
@@ -113,7 +109,7 @@ li {
   top: 100px;
 }
 
-.header-button>a {
+.header-button > a {
   text-decoration: none;
   color: black;
 }
@@ -146,16 +142,13 @@ li {
   background-color: rgba(255, 255, 255, 0.776);
 }
 
-
 .appointment-form {
   display: flex;
   flex-direction: column;
 }
 
-
-
-.disabled{ 
-  background-color: rgba(128, 128, 128, 0.5) ;
+.disabled {
+  background-color: rgba(128, 128, 128, 0.5);
 }
 
 /* Buttons Start */
@@ -167,28 +160,27 @@ button {
   font-weight: 600;
 }
 
-.button-container{
+.button-container {
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
   width: 500px;
 }
 
-.btn-remove{
+.btn-remove {
   color: var(--red);
   background-color: transparent;
 }
 
-.btn-edit{
+.btn-edit {
   color: var(--yellow);
   background-color: transparent;
-
 }
 
-.btn-specific{
+.btn-specific {
   font-weight: 600;
   font-size: 1rem;
-  font-family: 'Times New Roman', Times, serif
+  font-family: "Times New Roman", Times, serif;
 }
 
 .btn {
@@ -218,9 +210,8 @@ button {
 
 /* End Buttons */
 
-
 /* Modal Start */
-select{
+select {
   justify-content: fit-content;
   padding: 7px;
   margin-bottom: 10px;
@@ -285,15 +276,13 @@ select{
 
 /* Modal End */
 
-
 /* Modal confirmation */
 
-.modal-confirm{
+.modal-confirm {
   min-height: fit-content;
   width: 400px;
-  background-color: rgb(255, 255, 255,);
+  background-color: rgb(255, 255, 255);
   padding: 0;
-  
 }
 
 .modal-confirm p {
@@ -301,46 +290,40 @@ select{
   margin: 20px;
 
   display: flex;
-  justify-content:center;
+  justify-content: center;
 }
 
-
-.inside-modal{
+.inside-modal {
   background-color: #000000;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
   padding: 5px 10px;
 }
-.inside-modal h2{
+.inside-modal h2 {
   color: rgb(255, 255, 255);
   margin: 10px;
 }
 
-.modal-confirm button{
+.modal-confirm button {
   margin: 10px 10px;
 }
 
-
-.space-buttons{
+.space-buttons {
   display: flex;
-  justify-content:flex-end;
+  justify-content: flex-end;
 }
-
 
 /* END*/
 
-
 /* icons*/
-.icon{
+.icon {
   font-size: 2em;
 }
 
-.center{
-  margin:auto;
-
+.center {
+  margin: auto;
 }
 /* END */
-
 
 /* Table styles */
 .styled-table {
@@ -362,8 +345,8 @@ select{
 
 .styled-table th,
 .styled-table td {
-    padding: 15px 15px;
-    text-align: center;
+  padding: 15px 15px;
+  text-align: center;
 }
 
 .styled-table tbody tr {
