--- a/AlanaRetratos-Front-End/styles.css
+++ b/AlanaRetratos-Front-End/styles.css
@@ -18,7 +18,6 @@
 }
 
 /* General Tags */
-
 body {
   background: rgba(241, 250, 255, 0.2);
   padding: 0;
@@ -138,7 +137,7 @@ li {
   position: fixed;
   top: 200px;
   width: 1200px;
-  height: 700px;
+  /* max-height: 700px; */
   background-color: rgba(255, 255, 255, 0.776);
 }
 
@@ -149,7 +148,9 @@ li {
 
 .disabled {
   background-color: rgba(128, 128, 128, 0.5);
+  cursor: not-allowed;
 }
+
 
 /* Buttons Start */
 
@@ -365,4 +366,42 @@ select {
   font-weight: bold;
   color: #000000;
 }
+/* END */
+
+/* ALERTS */
+/* .alert {
+  width: 300px ;
+  padding: 12px 16px;
+  border-radius: 4px;
+  border-style: solid;
+  border-width: 1px;
+  margin-bottom: 12px;
+  font-size: 16px;
+  position: absolute;
+}
+
+.alert.alert-success {
+  background-color: rgba(227, 253, 235, 1);
+  border-color: rgba(38, 179, 3, 1);
+  color: rgba(60, 118, 61, 1);
+}
+
+.alert.alert-info {
+  background-color: rgba(217, 237, 247, 1);
+  color: rgba(49, 112, 143, 1);
+  border-color: rgba(126, 182, 193, 1);
+}
+
+
+.alert.alert-warning {
+  background-color: rgba(252, 248, 227, 1);
+  border-color: rgba(177, 161, 129, 1);
+  color: rgba(138, 109, 59, 1);
+}
+
+.alert.alert-danger {
+  background-color: rgba(248, 215, 218, 1);
+  border-color: rgba(220, 53, 69, 1);
+  color: rgba(114, 28, 36,1);
+} */
 /* END */
