--- a/AlanaRetratos-Front-End/styles.css
+++ b/AlanaRetratos-Front-End/styles.css
@@ -2,7 +2,7 @@
   --grey: #7d8285;
   --lightGrey: rgba(125, 130, 133, 0.06);
   --purple: rgb(125, 27, 76);
-  --lightPurple: rgba(125, 27, 76, 0.4);
+  --lightPurple: rgba(125, 27, 76, 0.5);
   --yellow: rgb(231, 201, 137);
   --lightYellow: rgba(231, 201, 137, 0.313);
   --white: #fffafa;
@@ -10,11 +10,11 @@
   --red: rgb(122 21 25);
   --blue: rgb(26, 26, 253);
 
-  --mom: rgba(123, 9, 9, 0.767);
-  --fashion: rgba(132, 192, 141, 0.4);
-  --career: rgba(56, 126, 237, 0.4);
-  --event: rgba(255, 105, 74, 0.4);
-  --debutant: rgba(74, 24, 46, 0.4);
+  --mom: rgba(123, 9, 9, 0.5);
+  --fashion: rgba(132, 192, 141, 0.5);
+  --career: rgba(56, 126, 237, 0.5);
+  --event: rgba(255, 105, 74, 0.5);
+  --debutant: rgba(74, 24, 46, 0.5);
 }
 
 /* General Tags */
@@ -24,8 +24,6 @@ body {
   margin: 0;
   position: relative;
   box-sizing: border-box;
-  width: 100vw;
-  height: 100vh;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 
   --fc-button-border-color: #ffffff;
@@ -66,8 +64,9 @@ li {
 
 /* Doodle */
 .doodle {
+  height: 100vh;
   position: relative;
-  overflow: auto;
+
 }
 .doodle::before {
   position: absolute;
@@ -77,7 +76,7 @@ li {
   left: 0;
   top: 0;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   z-index: -1;
   background-repeat: no-repeat;
   background-position: 100%;
@@ -97,15 +96,15 @@ li {
   flex-direction: row;
 }
 .info-display {
-  box-sizing: border-box;
-  padding: 30px 10px;
-  width: 90%;
   display: flex;
+  box-sizing: border-box;
   align-items: center;
   justify-content: space-between;
-  width: 100vw;
-  position: fixed;
+
+  padding: 30px 10px;
+  position: absolute;
   top: 100px;
+  width: 80%;
 }
 
 .header-button > a {
@@ -117,7 +116,11 @@ li {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-around;
+  /* justify-content: space-around; */
+  
+  width: 90%;
+  height: 90%;
+
 }
 
 .nav-list {
@@ -132,14 +135,7 @@ li {
   width: 120px;
 }
 
-.calendar-div {
-  padding: 20px 20px;
-  position: fixed;
-  top: 200px;
-  width: 1200px;
-  max-height: 700px;
-  background-color: rgba(255, 255, 255, 0.776);
-}
+
 
 .appointment-form {
   display: flex;
@@ -368,40 +364,70 @@ select {
 }
 /* END */
 
-/* ALERTS */
-/* .alert {
-  width: 300px ;
-  padding: 12px 16px;
-  border-radius: 4px;
-  border-style: solid;
-  border-width: 1px;
-  margin-bottom: 12px;
-  font-size: 16px;
+/* Pagination */
+.pagination-container {
+  display: flex;
+  align-items: center;
   position: absolute;
+  bottom: 0;
+  justify-content: center;
 }
-
-.alert.alert-success {
-  background-color: rgba(227, 253, 235, 1);
-  border-color: rgba(38, 179, 3, 1);
-  color: rgba(60, 118, 61, 1);
+.pagination-number,
+.pagination-button{
+  font-size: 1.1rem;
+  background-color: transparent;
+  border: none;
+  margin: 0.25rem 0.25rem;
+  cursor: pointer;
+  height: 2.5rem;
+  width: 2.5rem;
+  border-radius: .2rem;
 }
-
-.alert.alert-info {
-  background-color: rgba(217, 237, 247, 1);
-  color: rgba(49, 112, 143, 1);
-  border-color: rgba(126, 182, 193, 1);
+.pagination-number:hover,
+.pagination-button:not(.disabled):hover {
+  background: #fff;
 }
-
-
-.alert.alert-warning {
-  background-color: rgba(252, 248, 227, 1);
-  border-color: rgba(177, 161, 129, 1);
-  color: rgba(138, 109, 59, 1);
+.pagination-number.active {
+  color: #fff;
+  background: #0085b6;
 }
-
-.alert.alert-danger {
-  background-color: rgba(248, 215, 218, 1);
-  border-color: rgba(220, 53, 69, 1);
-  color: rgba(114, 28, 36,1);
-} */
 /* END */
+
+/* PhotoShoot colors */
+
+.calendar-box{
+  display: flex;
+  flex-direction: row;
+  gap: 30px;
+
+  position: relative;
+  top: 80px;
+  width: 80%;
+  height: 90%;
+  background-color: rgba(255, 255, 255, 0.5);
+  
+}
+
+
+.calendar-div {
+  width: 80%;
+  padding: 20px 50px;
+}
+.ps-colors{
+  display: flex;
+  flex-direction: column;
+}
+.ps-colors ul{
+  width: 200px;
+  position: relative;
+  top: 30%;
+}
+
+.ps-colors li{
+  font-weight: 800;
+  margin-top:20px ;
+}
+
+.z-index{
+  display: none;
+}
