--- a/AlanaRetratos-Front-End/styles.css
+++ b/AlanaRetratos-Front-End/styles.css
@@ -22,7 +22,6 @@ body {
   background: rgba(241, 250, 255, 0.2);
   padding: 0;
   margin: 0;
-  position: relative;
   box-sizing: border-box;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 
@@ -66,7 +65,6 @@ li {
 .doodle {
   height: 100vh;
   position: relative;
-
 }
 .doodle::before {
   position: absolute;
@@ -76,7 +74,7 @@ li {
   left: 0;
   top: 0;
   width: 100%;
-  height: 100vh;
+  height: 100%;
   z-index: -1;
   background-repeat: no-repeat;
   background-position: 100%;
@@ -88,7 +86,7 @@ li {
 /* Containers */
 .main-header {
   border-bottom: 1px solid black;
-  padding: 20px 30px;
+  padding: 10px 30px;
 }
 .header-div {
   display: flex;
@@ -223,7 +221,7 @@ select {
   gap: 0.4rem;
   width: 600px;
   padding: 1.3rem;
-  min-height: 250px;
+  height: fit-content;
 
   position: absolute;
 
@@ -236,6 +234,7 @@ select {
   box-shadow: 0 0 50px rgba(0, 0, 0, 0.3);
   border-radius: 15px;
 }
+
 
 .modal .flex {
   display: flex;
