--- a/AlanaRetratos-Front-End/styles.css
+++ b/AlanaRetratos-Front-End/styles.css
@@ -182,6 +182,10 @@ button {
   font-size: 0.9em;
 }
 
+.btn:hover{
+  background-color: rgba(128, 128, 128, 0.5);
+}
+
 .btn-open {
   height: fit-content;
 }
